apps/nextcloud/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: nextcloud
          image: nextcloud/all-in-one
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - protocol: TCP
              containerPort: 80
              name: 80-tcp
            - protocol: TCP
              containerPort: 8080
              name: 8080-tcp
            - protocol: TCP
              containerPort: 8443
              name: 8443-tcp
            - protocol: TCP
              containerPort: 3478
              name: 3478-tcp
            - protocol: UDP
              containerPort: 3478
              name: 3478-udp
          volumeMounts:
            - name: nextcloud_aio_mastercontainer
              mountPath: /mnt/docker-aio-config
            - name: docker-socket
              mountPath: /var/run/docker.sock
              readOnly: true
      volumes:
        - name: nextcloud_aio_mastercontainer
          hostPath:
            path: /mnt/nfs/AppData/nextcloud
            type: Directory
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
