apps/nextcloud/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: 80-tcp
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: 8080-tcp
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: 8443-tcp
